--- a/contacto.html
+++ b/contacto.html
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="sugerencias.html">Sugerencias</a>
+                        </li>
                     </ul>
                 </div>
             </div>
