Update index y css
Cambios de párrafos y al CCS, revisar contrastes, no se ven bien.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Carniceria El Carvajal</a>
+          <a class="navbar-brand" href="#">Carnicería "El Carvajal"</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -47,22 +47,33 @@
           <div class="carousel-item active">
             <img src="img/slider1.jpg" class="d-block w-100" alt="slider1">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Carniceria el Carvajal</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus magna, ultrices non lacus ut, accumsan pretium sapien. Etiam molestie, velit at consequat dictum, mi elit iaculis libero, eget ornare nisi mi sit amet eros. Vivamus nec risus quis erat scelerisque gravida sit amet quis sapien. Nam tempus, dui ut eleifend tempor, quam metus pellentesque augue, eu aliquam diam magna vel nisl. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent mollis varius pulvinar. Fusce id neque eget dui eleifend semper. Mauris consectetur varius arcu, in ornare dolor porttitor aliquet. Donec vitae leo at orci laoreet bibendum. Nunc quis quam eros. Cras aliquet sapien eu diam efficitur, laoreet ullamcorper ligula condimentum. Curabitur sapien metus, pharetra at maximus eu, blandit eget ante. Donec egestas tellus sapien, eu varius lorem pellentesque ac. Curabitur sed sem nisl</p>
+              <h5>Carniceria "El Carvajal"</h5>
+              <p>Sobre Nosotros: 
+                En nuestra carnicería, nos dedicamos a brindarte una experiencia culinaria inigualable.
+                 Con décadas de experiencia en la industria cárnica,
+                  hemos perfeccionado el arte de seleccionar y preparar los mejores cortes para ti. 
+                  Nuestro compromiso con la calidad y la frescura es insuperable.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/slider2.jpg" class="d-block w-100" alt="slider2">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Carniceria el Carvajal</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus magna, ultrices non lacus ut, accumsan pretium sapien. Etiam molestie, velit at consequat dictum, mi elit iaculis libero, eget ornare nisi mi sit amet eros. Vivamus nec risus quis erat scelerisque gravida sit amet quis sapien. Nam tempus, dui ut eleifend tempor, quam metus pellentesque augue, eu aliquam diam magna vel nisl. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent mollis varius pulvinar. Fusce id neque eget dui eleifend semper. Mauris consectetur varius arcu, in ornare dolor porttitor aliquet. Donec vitae leo at orci laoreet bibendum. Nunc quis quam eros. Cras aliquet sapien eu diam efficitur, laoreet ullamcorper ligula condimentum. Curabitur sapien metus, pharetra at maximus eu, blandit eget ante. Donec egestas tellus sapien, eu varius lorem pellentesque ac. Curabitur sed sem nisl</p>
+              <h5>Carnicería "El Carvajal"</h5>
+              <p> Nuestros Productos: Ofrecemos una amplia variedad de productos cárnicos, 
+                desde jugosos filetes hasta salchichas caseras. Trabajamos con proveedores locales 
+                de confianza para garantizar la calidad de cada pieza y ofrecemos opciones para 
+                satisfacer todas las preferencias dietéticas.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/slider3.jpg" class="d-block w-100" alt="slider3">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Carniceria el Carvajal</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus magna, ultrices non lacus ut, accumsan pretium sapien. Etiam molestie, velit at consequat dictum, mi elit iaculis libero, eget ornare nisi mi sit amet eros. Vivamus nec risus quis erat scelerisque gravida sit amet quis sapien. Nam tempus, dui ut eleifend tempor, quam metus pellentesque augue, eu aliquam diam magna vel nisl. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent mollis varius pulvinar. Fusce id neque eget dui eleifend semper. Mauris consectetur varius arcu, in ornare dolor porttitor aliquet. Donec vitae leo at orci laoreet bibendum. Nunc quis quam eros. Cras aliquet sapien eu diam efficitur, laoreet ullamcorper ligula condimentum. Curabitur sapien metus, pharetra at maximus eu, blandit eget ante. Donec egestas tellus sapien, eu varius lorem pellentesque ac. Curabitur sed sem nisl</p>
+              <h5>Carnicería "El Carvajal"</h5>
+              <p>
+                Nuestra misión es ofrecerte los mejores productos cárnicos y un servicio excepcional.
+                 Valoramos tu confianza y nos comprometemos a superar tus expectativas en cada visita.
+                  Estamos aquí para ayudarte con asesoramiento sobre cortes específicos, 
+                recetas y consejos de cocción en todo momento.</p>
             </div>
           </div>
         </div>
@@ -84,7 +95,7 @@
             <div class="card">
                 <img src="img/products/carne.jpg" class="card-img-top img-fluid" alt="Carne">
                 <div class="card-body">
-                    <h5 class="card-title">Carne</h5>
+                    <h5 class="card-title">Vacuno</h5>
                     <p class="card-text">La mejor carne fresca de la ciudad.</p>
                     <a href="productos.html" class="btn btn-primary">Ver más</a>
                 </div>
