--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/slider1.jpg" class="d-block w-100" alt="slider1">
+            <img src="img/slider1.jpg" class="d-block w-100 empavonada" alt="slider1">
             <div class="carousel-caption d-none d-md-block">
               <h5>Carniceria "El Carvajal"</h5>
               <p>Sobre Nosotros: 
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/slider2.jpg" class="d-block w-100" alt="slider2">
+            <img src="img/slider2.jpg" class="d-block w-100 empavonada" alt="slider2">
             <div class="carousel-caption d-none d-md-block">
               <h5>Carnicería "El Carvajal"</h5>
               <p> Nuestros Productos: Ofrecemos una amplia variedad de productos cárnicos, 
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/slider3.jpg" class="d-block w-100" alt="slider3">
+            <img src="img/slider3.jpg" class="d-block w-100 empavonada" alt="slider3">
             <div class="carousel-caption d-none d-md-block">
               <h5>Carnicería "El Carvajal"</h5>
               <p>
