--- a/carrito.html
+++ b/carrito.html
@@ -6,12 +6,11 @@
     <title>Carrito de Compras - Carnicería "El Carvajal"</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header id="navbar-placeholder">
-    </header>
+    <header id="navbar-placeholder"></header>
     <main class="container mt-5">
         <h2>Carrito de Compras</h2>
         <table class="table" id="cartTable">
@@ -24,15 +23,18 @@
                     <th scope="col">Acciones</th>
                 </tr>
             </thead>
-            <tbody>
-             
-            </tbody>
+            <tbody></tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3" class="text-end"><strong>Total:</strong></td>
+                    <td colspan="2" id="cartTotal">$0.00</td>
+                </tr>
+            </tfoot>
         </table>
         <button class="btn btn-danger" id="emptyCartBtn">Vaciar Carrito</button>
         <div class="d-flex justify-content-between">
             <button class="btn btn-outline-secondary">Continuar Comprando</button>
             <button class="btn btn-primary" onclick="window.location.href='pago.html'">Proceder al Pago</button>
-
         </div>
     </main>
 
@@ -40,86 +42,8 @@
     <script>
         $(function() {
             $("#navbar-placeholder").load("navbar.html");
-
-            function loadCart() {
-                const cart = JSON.parse(localStorage.getItem('cart')) || [];
-                const cartTableBody = document.querySelector('#cartTable tbody');
-                cartTableBody.innerHTML = '';
-
-                if (cart.length === 0) {
-                    const row = document.createElement('tr');
-                    row.innerHTML = '<td colspan="5" class="text-center">El carrito está vacío</td>';
-                    cartTableBody.appendChild(row);
-                } else {
-                    cart.forEach(item => {
-                        const row = document.createElement('tr');
-                        row.innerHTML = `
-                            <td>${item.name}</td>
-                            <td>$${item.price}</td>
-                            <td><input type="number" value="${item.quantity}" min="1" class="form-control quantity-input" data-id="${item.id}"></td>
-                            <td>$${(item.price * item.quantity).toFixed(2)}</td>
-                            <td><button class="btn btn-primary btn-sm remove-item" data-id="${item.id}">Eliminar</button></td>
-                        `;
-                        cartTableBody.appendChild(row);
-                    });
-                }
-
-                updateCartTotal();
-            }
-
-            function updateCartTotal() {
-                let total = 0;
-                const cart = JSON.parse(localStorage.getItem('cart')) || [];
-                cart.forEach(item => {
-                    total += item.price * item.quantity;
-                });
-                
-            }
-
-            function removeItem(productId) {
-                let cart = JSON.parse(localStorage.getItem('cart')) || [];
-                cart = cart.filter(item => item.id !== productId);
-                localStorage.setItem('cart', JSON.stringify(cart));
-                loadCart();
-            }
-
-            function updateQuantity(productId, quantity) {
-                let cart = JSON.parse(localStorage.getItem('cart')) || [];
-                const index = cart.findIndex(item => item.id === productId);
-                if (index !== -1) {
-                    cart[index].quantity = quantity;
-                    localStorage.setItem('cart', JSON.stringify(cart));
-                    loadCart();
-                }
-            }
-
-            function emptyCart() {
-                localStorage.removeItem('cart');
-                loadCart();
-            }
-
-            // Evento para eliminar un producto
-            $(document).on('click', '.remove-item', function() {
-                const productId = $(this).data('id');
-                removeItem(productId);
-            });
-
-            // Evento para actualizar cantidad
-            $(document).on('change', '.quantity-input', function() {
-                const productId = $(this).data('id');
-                const quantity = parseInt($(this).val());
-                if (quantity > 0) {
-                    updateQuantity(productId, quantity);
-                }
-            });
-
-            // Evento para vaciar el carrito
-            document.querySelector('#emptyCartBtn').addEventListener('click', function() {
-                emptyCart();
-            });
-
-            loadCart();
         });
     </script>
+    <script src="assets/js/carrito.js"></script>
 </body>
 </html>
