--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <title>Carnicería "El Carvajal" - Contacto</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
@@ -16,7 +16,7 @@
 
     <div class="col-md-6">
         <h3>Información de Contacto</h3>
-        <img src="img/maps.png" alt="Ubicación" class="img-fluid mb-3">
+        <img src="assets/img/maps.png" alt="Ubicación" class="img-fluid mb-3">
         <p><strong>Dirección:</strong> Avenida Siempre Viva 123, Springfield</p>
         <p><strong>Teléfono:</strong> +34 123 456 789</p>
         <p><strong>Correo electrónico:</strong> contacto@carniceriaelcarvajal.com</p>
