--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/slider1.jpg" class="d-block w-100 empavonada" alt="slider1">
+            <img src="/assets/img/slider1.jpg" class="d-block w-100 empavonada" alt="slider1">
             <div class="carousel-caption d-none d-md-block">
               <h5>Carniceria "El Carvajal"</h5>
               <p>Sobre Nosotros: 
@@ -34,7 +34,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/slider2.jpg" class="d-block w-100 empavonada" alt="slider2">
+            <img src="/assets/img/slider2.jpg"class="d-block w-100 empavonada" alt="slider2">
             <div class="carousel-caption d-none d-md-block">
               <h5>Carnicería "El Carvajal"</h5>
               <p> Nuestros Productos: Ofrecemos una amplia variedad de productos cárnicos, 
@@ -44,7 +44,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/slider3.jpg" class="d-block w-100 empavonada" alt="slider3">
+            <img src="/assets/img/slider3.jpg" class="d-block w-100 empavonada" alt="slider3">
             <div class="carousel-caption d-none d-md-block">
               <h5>Carnicería "El Carvajal"</h5>
               <p>
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col-md-4">
             <div class="card">
-                <img src="img/products/carne.jpg" class="card-img-top img-fluid" alt="Carne">
+                <img src="assets/img/products/carne.jpg" class="card-img-top img-fluid" alt="Carne">
                 <div class="card-body">
                     <h5 class="card-title">Vacuno</h5>
                     <p class="card-text">La mejor carne fresca de la ciudad.</p>
@@ -81,7 +81,7 @@
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img src="img/products/pollo.jpg" class="card-img-top img-fluid" alt="Pollo">
+                <img src="assets/img/products/pollo.jpg" class="card-img-top img-fluid" alt="Pollo">
                 <div class="card-body">
                     <h5 class="card-title">Pollo</h5>
                     <p class="card-text">Pollo fresco y de alta calidad.</p>
@@ -91,7 +91,7 @@
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img src="img/products/cerdo.jpg" class="card-img-top img-fluid" alt="Cerdo">
+                <img src="assets/img/products/cerdo.jpg" class="card-img-top img-fluid" alt="Cerdo">
                 <div class="card-body">
                     <h5 class="card-title">Cerdo</h5>
                     <p class="card-text">Cerdo fresco y delicioso para tus comidas.</p>
