--- a/login.html
+++ b/login.html
@@ -6,41 +6,36 @@
     <title>Carnicería El Carvajal - Registro</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header id="navbar-placeholder">
-    </header>
+    <header id="navbar-placeholder"></header>
 
-
-   <div class="login-container">
-    <div class="container mt-5">
-        <h2 class="text-center">Iniciar sesión</h2>
-        <form>
-            <div class="mb-3">
-                <label for="email" class="form-label">Correo electrónico</label>
-                <input type="email" class="form-control" id="email" placeholder="correo"
-            >
-            <div class="mb-3">
-                <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" placeholder="Contraseña">
-            </div>
-            <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-        </form>
-        No tienes una cuenta? <a href="signup.html">Regístrate</a>
+    <div class="login-container">
+        <div class="container mt-5">
+            <h2 class="text-center">Iniciar sesión</h2>
+            <form id="login-form">
+                <div class="mb-3">
+                    <label for="email" class="form-label">Correo electrónico</label>
+                    <input type="email" class="form-control" id="email" placeholder="Correo" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña</label>
+                    <input type="password" class="form-control" id="password" placeholder="Contraseña" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+            </form>
+            No tienes una cuenta? <a href="signup.html">Regístrate</a>
+        </div>
     </div>
 
-    
-</div>
-</div>
-
-<script>
-    $(function() {
-        $("#navbar-placeholder").load("navbar.html");
-    });
-</script>
+    <script>
+        $(function() {
+            $("#navbar-placeholder").load("navbar.html");
+        });
+    </script>
+    <script src="assets/js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
-
