--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,3 @@
-<!-- navbar.html -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Carnicería "El Carvajal"</a>
@@ -6,21 +5,26 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+                    <a class="nav-link" href="productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="sugerencias.html">Sugerencias</a>
+                    <a class="nav-link" href="sugerencias.html">Sugerencias</a>
                 </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="login.html"><i class="fas fa-user"></i> Iniciar sesión</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="carrito.html"><i class="fas fa-shopping-cart"></i> Carrito</a>
+                    <a class="nav-link position-relative" href="carrito.html">
+                        <i class="fas fa-shopping-cart"></i> Carrito
+                        <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">0</span>
+                    </a>
                 </li>
             </ul>
         </div>
