--- a/productos.html
+++ b/productos.html
@@ -6,12 +6,11 @@
     <title>Carnicería "El Carvajal" - Productos</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header id="navbar-placeholder">
-    </header>
+    <header id="navbar-placeholder"></header>
 
     <div id="productos" class="container my-4">
         <h2 class="text-center">Nuestros productos</h2>
@@ -19,7 +18,7 @@
             <!-- Tarjeta de producto -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/products/carne.jpg" class="card-img-top img-fluid" alt="Carne">
+                    <img src="assets/img/products/carne.jpg" class="card-img-top img-fluid" alt="Carne">
                     <div class="card-body">
                         <h5 class="card-title">Carne</h5>
                         <p class="card-text">Carne molida de buena alta calidad.</p>
@@ -38,7 +37,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/products/cerdo.jpg" class="card-img-top img-fluid" alt="Cerdo">
+                    <img src="assets/img/products/cerdo.jpg" class="card-img-top img-fluid" alt="Cerdo">
                     <div class="card-body">
                         <h5 class="card-title">Cerdo</h5>
                         <p class="card-text">Cerdo fresco y delicioso de alta calidad.</p>
@@ -57,7 +56,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/products/pollo.jpg" class="card-img-top img-fluid" alt="Pollo">
+                    <img src="assets/img/products/pollo.jpg" class="card-img-top img-fluid" alt="Pollo">
                     <div class="card-body">
                         <h5 class="card-title">Pollo</h5>
                         <p class="card-text">Pollo fresco y de alta calidad.</p>
@@ -77,32 +76,31 @@
         </div>
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="cartModalLabel">Producto añadido al carrito</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    ¿Quieres seguir comprando o ir al carrito?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Seguir Comprando</button>
+                    <button type="button" class="btn btn-primary" onclick="window.location.href='carrito.html'">Ir al Carrito</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script>
         $(function() {
             $("#navbar-placeholder").load("navbar.html");
-
-            // Función para añadir producto al carrito
-            $('.add-to-cart').click(function() {
-                const productId = $(this).data('id');
-                const productName = $(this).data('name');
-                const productPrice = $(this).data('price');
-                const quantity = parseInt($(this).siblings('.quantity-input').val());
-                const product = { id: productId, name: productName, price: productPrice, quantity: quantity };
-
-                let cart = JSON.parse(localStorage.getItem('cart')) || [];
-                const index = cart.findIndex(item => item.id === productId);
-
-                if (index === -1) {
-                    cart.push(product);
-                } else {
-                    cart[index].quantity += quantity;
-                }
-
-                localStorage.setItem('cart', JSON.stringify(cart));
-                alert(`${productName} añadido al carrito`);
-            });
         });
     </script>
+    <script src="assets/js/productos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
