--- a/carrito.html
+++ b/carrito.html
@@ -27,23 +27,28 @@
             <tfoot>
                 <tr>
                     <td colspan="3" class="text-end"><strong>Total:</strong></td>
-                    <td colspan="2" id="cartTotal">$0.00</td>
+                    <td colspan="2" id="cartTotal">$0</td>
                 </tr>
             </tfoot>
         </table>
         <button class="btn btn-danger" id="emptyCartBtn">Vaciar Carrito</button>
         <div class="d-flex justify-content-between">
-            <button class="btn btn-outline-secondary">Continuar Comprando</button>
+            <button class="btn btn-outline-secondary" onclick="window.location.href='productos.html'">Continuar Comprando</button>
             <button class="btn btn-primary" onclick="window.location.href='pago.html'">Proceder al Pago</button>
         </div>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
         $(function() {
-            $("#navbar-placeholder").load("navbar.html");
+            $("#navbar-placeholder").load("navbar.html", function() {
+                // Actualiza el contador del carrito
+                const cart = JSON.parse(localStorage.getItem('cart')) || [];
+                const totalCount = cart.reduce((sum, item) => sum + item.quantity, 0);
+                $('#cart-count').text(totalCount);
+            });
         });
     </script>
     <script src="assets/js/carrito.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
