--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Carniceria El Carvajal</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
             <img src="/assets/img/slider1.jpg" class="d-block w-100 empavonada" alt="slider1">
             <div class="carousel-caption d-none d-md-block">
               <h5>Carniceria "El Carvajal"</h5>
-              <p>Sobre Nosotros: 
+              <p class="about-text">Sobre Nosotros: 
                 En nuestra carnicería, nos dedicamos a brindarte una experiencia culinaria inigualable.
                  Con décadas de experiencia en la industria cárnica,
                   hemos perfeccionado el arte de seleccionar y preparar los mejores cortes para ti. 
@@ -37,7 +37,7 @@
             <img src="/assets/img/slider2.jpg"class="d-block w-100 empavonada" alt="slider2">
             <div class="carousel-caption d-none d-md-block">
               <h5>Carnicería "El Carvajal"</h5>
-              <p> Nuestros Productos: Ofrecemos una amplia variedad de productos cárnicos, 
+              <p class="about-text"> Nuestros Productos: Ofrecemos una amplia variedad de productos cárnicos, 
                 desde jugosos filetes hasta salchichas caseras. Trabajamos con proveedores locales 
                 de confianza para garantizar la calidad de cada pieza y ofrecemos opciones para 
                 satisfacer todas las preferencias dietéticas.</p>
@@ -47,7 +47,7 @@
             <img src="/assets/img/slider3.jpg" class="d-block w-100 empavonada" alt="slider3">
             <div class="carousel-caption d-none d-md-block">
               <h5>Carnicería "El Carvajal"</h5>
-              <p>
+              <p class = "about-text">
                 Nuestra misión es ofrecerte los mejores productos cárnicos y un servicio excepcional.
                  Valoramos tu confianza y nos comprometemos a superar tus expectativas en cada visita.
                   Estamos aquí para ayudarte con asesoramiento sobre cortes específicos, 
@@ -118,5 +118,6 @@
             $("#navbar-placeholder").load("navbar.html");
         });
     </script>
+     <script src="assets/js/navbar.js"></script>
 </body>
 </html>
