--- a/productos.html
+++ b/productos.html
@@ -94,7 +94,7 @@
             </div>
         </div>
     </div>
-
+    <script src="assets/js/navbar.js"></script>
     <script>
         $(function() {
             $("#navbar-placeholder").load("navbar.html");
