--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,8 @@
-<!-- navbar.html -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Carnicería "El Carvajal"</a>
+        <a class="navbar-brand" href="index.html">
+            <img src="assets/img/logo.png" alt="Logo" class="navbar-logo d-inline-block align-text-top">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,7 +25,7 @@
                 <li class="nav-item">
                     <a class="nav-link position-relative" href="carrito.html">
                         <i class="fas fa-shopping-cart"></i> Carrito
-                        <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">0</span>
+                        <span id="cart-count" class="position-absolute top-0 start-95 translate-middle badge rounded-pill bg-danger">0</span>
                     </a>
                 </li>
             </ul>
