--- a/navbar.html
+++ b/navbar.html
@@ -1,12 +1,17 @@
+<!-- Barra de navegación -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
+        <!-- Logo -->
         <a class="navbar-brand" href="index.html">
             <img src="assets/img/logo.png" alt="Logo" class="navbar-logo d-inline-block align-text-top">
         </a>
+        <!-- Botón de menú desplegable -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        <!-- Elementos de la barra de navegación -->
         <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- Elementos de la izquierda -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" href="productos.html">Productos</a>
@@ -18,6 +23,7 @@
                     <a class="nav-link" href="sugerencias.html">Sugerencias</a>
                 </li>
             </ul>
+            <!-- Elementos de la derecha -->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="login.html"><i class="fas fa-user"></i> Iniciar sesión</a>
