--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 </head>
 <body>
     <header id="navbar-placeholder">
@@ -22,15 +21,20 @@
         <p><strong>Correo electrónico:</strong> contacto@carniceriaelcarvajal.com</p>
     </div>
 
-
-    
+    <!-- Carga del script para el menú de navegación -->
     <script>
         $(function() {
             $("#navbar-placeholder").load("navbar.html");
         });
     </script>
-     <script src="assets/js/navbar.js"></script>
+    <!-- Fin del script de carga del menú de navegación -->
+
+    <!-- Carga del script para la barra de navegación -->
+    <script src="assets/js/navbar.js"></script>
+    <!-- Fin del script de la barra de navegación -->
+
+    <!-- Carga del script de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Fin del script de Bootstrap -->
 </body>
 </html>
-
